--- a/src/app/people-list-component/people-list-component.component.html
+++ b/src/app/people-list-component/people-list-component.component.html
@@ -1,8 +1,10 @@
-<ul class="list-view">
-  <li *ngFor="let person of people" class="list-item">
-    <a [routerLink]="['/details', person._id]">
-      <img [src]="person.picture" alt="Person Image" class="list-item-image">
-      <span class="list-item-name">{{ person.name.first }} {{ person.name.last }}</span>
-    </a>
-  </li>
-</ul>
+<div >
+  <ul class="list-view">
+    <li *ngFor="let person of people" class="list-item" (click)="navigateToDetails(person._id)">
+    
+        <img [src]="person.picture" alt="Person Image" class="list-item-image">
+        <span class="list-item-name">{{ person.name.first }} {{ person.name.last }}</span>
+    
+    </li>
+  </ul>
+</div>
