--- a/src/app/people-list-component/people-list-component.component.css
+++ b/src/app/people-list-component/people-list-component.component.css
@@ -1,6 +1,8 @@
 .list-view {
     list-style-type: none;
     padding: 0;
+    max-height: 500px;
+    overflow-y: auto;
   }
   
   .list-item {
@@ -10,6 +12,9 @@
     border-bottom: 1px solid #ccc;
   }
   
+  .list-item:hover {
+    cursor: pointer;
+  }
   .list-item-image {
     width: 50px;
     height: 50px;
