--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,6 +92,10 @@
     margin-top: 1.5rem;
   }
 
+  .content2 {
+    display: block;
+  }
+
   .divider {
     width: 1px;
     background: var(--red-to-pink-to-purple-vertical-gradient);
@@ -178,18 +182,23 @@
 </style>
 
 <main class="main">
+  <div class="content2">
+    <img src="https://github.com/moovup/programming-test/blob/master/assets/web/graph.png?raw=true" style="width: 300px; height:300px;" alt="">
+    <calculate-node-path/>
+  </div>
   <div class="content">
     <div class="left-side" stlye=" max-height: 300px;overflow-y: auto;">
-      <h1>Hello, {{ title }}</h1>
       <app-people-list/>
     
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side" style="height:500px;width:100%">
-      <app-details/>
-       
+    <div class="right-side" style="height:500px;width:80%">
      
+       
+      <app-details/>
       
     </div>
+    
   </div>
+  
 </main>
