--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
   }
 
   .content {
-    display: flex;
+    /* display: flex; */
     justify-content: space-around;
     width: 100%;
     
@@ -186,17 +186,10 @@
     <img src="https://github.com/moovup/programming-test/blob/master/assets/web/graph.png?raw=true" style="width: 300px; height:300px;" alt="">
     <calculate-node-path/>
   </div>
+  <div class="divider" role="separator" aria-label="Divider"></div>
   <div class="content">
     <div class="left-side" stlye=" max-height: 300px;overflow-y: auto;">
       <app-people-list/>
-    
-    </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side" style="height:500px;width:80%">
-     
-       
-      <app-details/>
-      
     </div>
     
   </div>
